# Python-Curso-em-Video

./: README.md  aula08-exemplos.py  aula09-exemplos.py  aula10-exemplos.py  aula11-FimModulo1-exemplos.py  aula11-exemplos.py  aula12-exemplos.py  aula13-exemplos.py  desafio002-aula04.py  desafio003-aula04.py  desafio004-aula04.py  desafio005-aula07.py  desafio006-aula07.py  desafio007-aula07.py  desafio008-aula07.py  desafio009-aula07.py  desafio010-aula07.py  desafio011-aula07.py  desafio012-aula07.py  desafio013-aula07.py  desafio014-aula07.py  desafio015-aula07.py  desafio016-aula08.py  desafio018-aula08.py  desafio020-aula08.py  desafio021-aula08.py  desafio022-aula09.py  desafio023-aula09.py  desafio024-aula09.py  desafio025-aula09.py  desafio026-aula09.py  desafio027-aula09.py  desafio028-aula10.py  desafio029-aula10.py  desafio030-aula10.py  desafio031-aula10.py  desafio032-aula10.py  desafio033-aula10.py  desafio033.2-aula10.py  desafio034-aula10.py  (+58 more)
.github/workflows/: main.yml
Python-Curso-em-Video/: aula09-exemplos.py  aula4-desafio1.py  aula4-exemplo1.py  aula4-tarefa1.py  aula6-tarefa1.py  aula8-exemplos.py  desafio000-MODELO.py  desafio003-aula04.py  desafio004-aula04.py  desafio005.py  desafio006-aula07.py  desafio006.py  desafio008-aula07.py  desafio009-aula07.py  desafio010-aula07.py  desafio012-aula07.py  desafio015-aula07.py  desafio017-aula08.py  desafio021-aula08.py
